--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activities.PoolDetailsActivity"
+        <activity
+            android:name=".activities.PoolDetailsActivity"
             android:parentActivityName=".activities.PoolsActivity"/>
     </application>
 
